--- a/app/src/main/res/layout/main_fragment_recommend.xml
+++ b/app/src/main/res/layout/main_fragment_recommend.xml
@@ -17,6 +17,17 @@
         android:layout_height="160dp" />
 
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintTop_toBottomOf="@id/banner_view"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="160dp"
+        android:layout_marginBottom="10dp"
+        android:scrollbars="vertical"
+        android:scrollbarStyle="insideOverlay"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
